tests/unit/language/policy/errors/dead_policy_on_safe_op.arche
// An explicit policy on an op the prover already proved safe is a dead policy — it can never fire.
// That's the W0018 lint (not a hard error, per the MVP choice): the build still succeeds, but warns.
// Here `a[2]` on int[4] is provably in bounds, so `!clamp` is dead.
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "is dead\|policy_on_safe_op\|W0018" %t.out
#import { fmt }
main :: proc() {
  a: [4]int;
  a[0] = 1;
  x := a[2] !clamp; // provably in bounds -> dead policy, W0018
  fmt.printf("%d\n", x);
}
